--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,6 +21,15 @@
 
         <p id="result"></p>
     </div>
+    <footer>
+    <p>
+        This project finds the shortest hyperlink path between two Polish Wikipedia articles.
+        Check out the code on
+        <a href="https://github.com/radekgersz/PL-wikipedia-solver" target="_blank" rel="noopener noreferrer">
+            GitHub
+        </a>.
+    </p>
+    </footer>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
