--- a/src/static/style.css
+++ b/src/static/style.css
@@ -115,3 +115,12 @@ button:active {
 .suggestion-item:hover {
     background-color: #f0f0f0;
 }
+
+#result div:first-child {
+    background-color: #f9fafb;
+    border-radius: 6px;
+    padding: 6px 10px;
+    margin-bottom: 10px;
+    font-style: italic;
+}
+
