--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,6 +12,7 @@
             <div class="input-group">
                 <input id="start" placeholder="Starting Article">
             </div>
+            <button id="swap-btn" type="button" title="Swap start and end articles">⇄</button>
             <div class="input-group">
                 <input id="end" placeholder="End Article">
             </div>
